discussion/kv_engine/162150/162150_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48506: Use move-semantic on expelled container at ItemExpel

The expelled container is constructed under CM::queueLock and then
copied back to the caller for lock-free destruction.
That copy is executed under CM::queueLock and it's O(N = toWrite-size),
so replace that with a O(1) move.

Change-Id: I87aa142d8d53ad48027503ecc1521281b9146d84

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-09-23 12:53:20.000000000
Message: 
Uploaded patch set 5: Patch Set 4 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-23 14:53:15.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34325/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint.cc:530:5:
error: use of undeclared identifier "TRACE_EVENT0"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34325/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40324/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40324/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12769/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:530:5: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
    TRACE_EVENT0("wip", "C::expelItems");
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:554:9: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
        TRACE_EVENT0("wip", "C::expelItems::splice");
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:567:9: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
        TRACE_EVENT0("wip", "C::expelItems::open_and_mem");
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:591:9: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
        TRACE_EVENT0("wip", "C::expelItems::closed_or_disk");
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12769/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:530:5:
error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12769/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15151/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11559/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2407/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14641/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14383/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2440/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13526/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22651/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2021-09-29 09:37:46.000000000
Message: 
Removed reviewer Dave Rigby.
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2021-09-29 14:06:04.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
